# rust-ffmpeg-sys

./: Cargo.toml  build.rs  gen.rs
src/: bindings.rs  lib.rs
src/avutil/: mod.rs  rational.rs
