[package]
name    = "ffmpeg-sys"
version = "4.1.3"
links   = "ffmpeg"

authors = ["meh. <meh@schizofreni.co>", "Luminarys <postmaster@gensok.io>"]
license = "WTFPL"

description = "FFI bindings to FFmpeg for kawa"
repository  = "https://github.com/Luminarys/rust-ffmpeg-sys"
keywords    = ["audio", "video"]

[dependencies]
libc = "0.2"
